2014-09-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (__merge_cr_moveresize):
	(__handle_configure_request):
	Sanitise the geometry in ConfigureRequest events before using them.
	(SendConfigureNotify):
	Sanitise the geometry in ConfigureNotify events before sending them.

2014-09-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/FEvent.h:
	* libs/FEvent.c (fev_sanitise_configure_request)
	(fev_sanitise_configure_notify):
	New utility functions

2014-09-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/FEvent.h:
	* libs/FEvent.c (FCheckWeedTypedWindowEvents, FWeedTypedWindowEvents):
	* fvwm/icons.c (DrawIconWindow):
	(DrawIconWindow):
	* fvwm/menus.c (__mloop_do_popup):
	(select_menu_item):
	Replace unused last argument from FWeedTypedWindowEvents and replace it
	with a pointer to store the last matched event.  Renamed the function
	too.

2014-09-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/events.c (MAX_NUM_WEED_EVENT_TYPES):
	(NUM_EVENTS_TO_PEEK):
	(_weed_event_type_arg):
	(_weed_window_mask_events_arg):
	(_pred_weed_accumulate_expose):
	(_pred_weed_handle_expose):
	(_pred_weed_event_type):
	(_pred_flush_property_notify_weed, HandlePropertyNotify)
	(__merge_cr_moveresize, HandleReparentNotify, HandleEvents):
	(flush_accumulate_expose):
	(handle_all_expose):
	(discard_typed_events):
	(flush_property_notify_stop_at_event_type):
	(discard_events):
	Rewrite event discarding code.

	* fvwm/events.c (flush_expose):
	(discard_window_events):
	(check_for_another_property_notify):
	Removed obsolete functions.

	* fvwm/events.c (_pred_button_click, __predicate_button_click):
	(_pred_flush_property_notify_weed, test_typed_window_event):
	(discard_typed_events, discard_events):
	Renamed functions

	* fvwm/events.h:
	Deleted and renamed some interfaces.
	(flush_property_notify_args):
	(test_typed_window_event_args):
	Renamed structure

	* fvwm/add_window.c (do_recapture):